feat: ✨ Integrate Fathom Analytics for tracking

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 # Site metadata
 NEXT_PUBLIC_SITE_URL="https://www.eliminarfondodeunaimagen.com"
+NEXT_PUBLIC_FATHOM_ID=""
 
 # hCaptcha
 NEXT_PUBLIC_HCAPTCHA_SITE_KEY=""
