--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@hcaptcha/react-hcaptcha": "^1.12.0",
     "@headlessui/react": "^2.2.9",
     "clsx": "^2.1.1",
+    "fathom-client": "^3.7.2",
     "lucide-react": "^0.542.0",
     "motion": "^12.23.12",
     "next": "^15.5.3",
