chore: rename domain references to quitarfondoonline

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # Site metadata
-NEXT_PUBLIC_SITE_URL="https://www.eliminarfondodeunaimagen.com"
+NEXT_PUBLIC_SITE_URL="https://www.quitarfondoonline.com"
 NEXT_PUBLIC_FATHOM_ID=""
 
 # hCaptcha
