--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "eliminar-fondo-lead-magnet",
+  "name": "quitar-fondo-online",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "check:copy-uniqueness": "node scripts/check-exact-sentence-overlap.mjs"
   },
   "dependencies": {
     "@hcaptcha/react-hcaptcha": "^1.12.0",
